src/App.scss
// CSS Reset
@import "~reset-css/reset.css";
// Materialize-css
@import "~materialize-css/dist/css/materialize.css";
// @import "~jquery/dist/jquery.js";
// @import "~materialize-css/dist/js/materialize.js";


// Box sizing
*, *:before, *:after {
	box-sizing: inherit;
}
body {
	box-sizing: border-box;
	background-color: #607d8b;
	overflow: hidden;
	color: white;

}

